--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ header{
 header h3{
     font-size: 1rem;
     color: hsl(241, 100%, 89%);
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
     font-weight: 500;
 }
 
@@ -101,7 +101,7 @@ main{
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
-    padding: 1rem;
+    padding: 1rem 2rem;
 }
 
 main h3{
@@ -174,6 +174,7 @@ main button:hover{
     /*Maint container dispostion and space configuation to row*/
     .main-container {
         height: fit-content;
+        width: 80%;
         flex-direction: row;
         /*box shadow*/
         box-shadow: 0 0 1rem hsla(0, 0%, 0%, 0.1);
@@ -182,6 +183,7 @@ main button:hover{
 
     header {
         height: 100%;
+        width: 90%;
         border-radius: 30px;
   
     }
