--- a/styles/style.css
+++ b/styles/style.css
@@ -49,9 +49,9 @@ header{
 }
 
 header h3{
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: hsl(241, 100%, 89%);
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     font-weight: 500;
 }
 
@@ -107,7 +107,7 @@ main{
 main h3{
     font-size: 1.25rem;
     color: hsl(0, 0%, 0%);
-    margin: 1rem 0rem;
+    margin: 1.5rem 0rem;
 }
 
 main .card{
@@ -186,6 +186,11 @@ main button:hover{
         width: 90%;
         border-radius: 30px;
   
+    }
+
+    header h3{
+        margin-bottom: 5rem;
+
     }
     
 }
